# rust-gpu

./: Cargo.toml
.github/ISSUE_TEMPLATE/: enhancement.md  meeting.md
.github/workflows/: ci.yaml
crates/rustc_codegen_spirv/: Cargo.toml
crates/rustc_codegen_spirv/src/: abi.rs  attr.rs  spirv_type.rs  spirv_type_constraints.rs  symbols.rs
crates/rustc_codegen_spirv/src/builder/: builder_methods.rs
crates/rustc_codegen_spirv/src/codegen_cx/: constant.rs  type_.rs
crates/rustc_codegen_spirv/src/linker/: new_structurizer.rs  simple_passes.rs  structurizer.rs
crates/spirv-builder/src/: lib.rs
crates/spirv-builder/src/test/: mod.rs  (+2 more)
crates/spirv-std/: Cargo.toml
crates/spirv-std-macros/: Cargo.toml
crates/spirv-std/macros/: Cargo.toml
crates/spirv-std/macros/src/: image.rs  lib.rs  shared_image_impl.rs
crates/spirv-std/shared/: Cargo.toml
crates/spirv-std/shared/src/: image_params.rs  lib.rs
crates/spirv-std/src/: arch.rs  float.rs  image.rs  lib.rs  number.rs  ray_tracing.rs  scalar.rs  sealed.rs  vector.rs
docs/src/: platform-support.md
examples/runners/wgpu/: build.rs
examples/shaders/compute-shader/: Cargo.toml
examples/shaders/shared/: Cargo.toml
examples/shaders/simplest-shader/: Cargo.toml
examples/shaders/sky-shader/: Cargo.toml
tests/deps-helper/: Cargo.toml
tests/ui/arch/: convert_f_to_s.rs  convert_f_to_u.rs  convert_s_to_f.rs  convert_u_to_acceleration_structure_khr.rs  convert_u_to_f.rs  f_convert_vector.rs  ignore_intersection_khr.rs  quantize_to_f16.rs  report_intersection_khr.rs  terminate_ray_khr.rs  trace_ray_khr.rs
(+6 files in other folders)
