[package]
name = "spirv-std-macros"
version = "0.3.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"
description = "Macros for spirv-std"

[lib]
proc-macro = true

[dependencies]
spirv-std-shared = { path = "../shared", version = "0.3.0", features = ["macros"] }
heck = "0.3.2"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features=["full"] }
